web/Styles/less/components/search/result.less
.search-result {
  padding: 16px 0;
  border-bottom: 1px solid #f5f5f5;
  display: flex;
  align-items: center;

  > .text {
    flex-grow: 1;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  > .text > .title {
    display: flex;
    align-items: center;
  }

  > .text > .title > .label {
    color: #000;
  }

  &.-active  > .text > .title > .label {
    color: @brand-color;
  }

  > .text > .title > .item {
    margin-left: 10px;
  }

  > .text > .artists {
    display: flex;
    color: @color-gray;
    font-size: 14px;
  }

  > .text > .artists > .artist {
    color: @color-gray;
  }

  > .text > .artists > .sep {
    white-space: pre;
  }

  > .buttons {
    display: flex;
    align-items: center;
  }

  > .buttons > .button {
    cursor: pointer;
    flex-shrink: 0;
  }

  > .buttons > .button {
    margin-left: 40px;
  }
}

